feat: NetCore payload + global MCP Claude/Codex config
- Add NetCoreDynamicPayload / NETCORE_AES_BASE64 / netcore plugins
- MCP as app-level menu entry; bindHost + host:port CLI
- Write Claude / Codex MCP configs; shell_detect_encoding
- Keep encoding charset in sync on ShellEntity.setEncoding
- Update README for NetCore and MCP usage

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>